<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity = "center"
        android:padding="@dimen/padding_details">


        <TextView
            android:id="@+id/restaurantNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:fontFamily="@font/vesper_libre_bold"
            android:padding="@dimen/padding"
            android:text="@string/name"
            android:textColor="@color/button_color"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:fontFamily="@font/vesper_libre_medium"
            android:drawableStart="@mipmap/outline_location_on_black_24"
            android:padding="@dimen/padding"
            android:text="@string/address"
            android:textSize="@dimen/text_size_normal"
            />

        <Button
            android:id="@+id/reserveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/button_color"
            android:drawableLeft="@drawable/ic_date_range_black_24dp"
            android:padding="16dp"
            android:text="@string/rezerva_o_masa_online"
            android:textSize="17dp" />


        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vesper_libre_medium"
            android:text="@string/description"
            android:textSize="@dimen/text_size_normal" />


        <TextView
            android:id="@+id/openingTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_shape"
            android:drawableStart="@drawable/ic_access_time_black_24dp"
            android:fontFamily="@font/vesper_libre_medium"
            android:gravity="center_vertical"
            android:layout_margin="20dp"
            android:text="@string/openingtime"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vesper_libre_medium"
            android:text="Vezi locatia exacta"></TextView>
    </LinearLayout>

</LinearLayout>