<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/reservationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:fontFamily="@font/vesper_libre_bold"
        android:padding="@dimen/padding"
        android:textColor="@color/button_color"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/time_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203" />

    <TextView
        android:id="@+id/time_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:fontFamily="@font/vesper_libre_bold"
        android:text="@string/no_time_picked"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/time_picker_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/time_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginBottom="440dp"
        android:fontFamily="@font/vesper_libre_bold"
        android:background="@drawable/background_shape"
        android:gravity="center_vertical"
        android:text="@string/open_time_picker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="No date picked."
        android:fontFamily="@font/vesper_libre_bold"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/date_picker_button"
        app:layout_constraintTop_toBottomOf="@+id/time_picker_button"
        app:layout_constraintVertical_bias="0.677"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/date_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:fontFamily="@font/vesper_libre_bold"
        android:background="@drawable/background_shape"
        android:text="@string/open_date_picker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reservationTextView"
        app:layout_constraintVertical_bias="0.527" />

    <Button
        android:id="@+id/reservation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_shape"
        android:fontFamily="@font/vesper_libre_bold"
        android:text="Rezerva"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_picker_button" />
</androidx.constraintlayout.widget.ConstraintLayout>